added video,removed same url result and added new frontend code

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-information retrieval from web page
+Chrome Extension which gives relevant content about the current web document that user is reading
